fix hiding battery and move more html in html file

--- a/render/styles.css
+++ b/render/styles.css
@@ -243,6 +243,10 @@ div.batt_container .battery0 {
   top: -178px;
 }
 
+div.batt_container .batteryHide {
+    display: none;
+}
+
 /*
 *
 * ==========================================
